--- a/_sitemap.html
+++ b/_sitemap.html
@@ -167,6 +167,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-14yzgew{line-height:18px;}
 .r-150rngu{-webkit-overflow-scrolling:touch;}
 .r-151bszm{color:rgba(212,192,136,1.00);}
+.r-15d164r{margin-bottom:10px;}
 .r-15w3iup{background-color:rgba(26,26,10,0.80);}
 .r-15zivkp{margin-bottom:4px;}
 .r-16y2uox{flex-grow:1;}
@@ -262,6 +263,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ocf4r9{scroll-snap-type:y mandatory;}
 .r-1od2jal{font-weight:300;}
 .r-1onu96p{border-curve:continuous;}
+.r-1or9b2r{height:10px;}
 .r-1oszu61{align-items:stretch;}
 .r-1otgn73{touch-action:manipulation;}
 .r-1p0dtai{bottom:0px;}
@@ -326,6 +328,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-5753bg{background-color:rgba(26,26,46,1.00);}
 .r-5kkj8d{border-top-width:1px;}
 .r-5oul0u{margin-bottom:8px;}
+.r-5soawk{width:10px;}
 .r-60vfwk{min-width:1px;}
 .r-61z16t{margin-right:0px;}
 .r-633pao>* {pointer-events:none;}
@@ -497,5 +500,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts">@font-face{font-family:"Ionicons";src:url("/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf");font-display:auto}
 @font-face{font-family:"MaterialCommunityIcons";src:url("/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf");font-display:auto}
 @font-face{font-family:"AntDesign";src:url("/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf");font-display:auto}
-@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-1954ca4ddfc8b837d25c9636b7e8f587.js" defer></script>
+@font-face{font-family:"MaterialIcons";src:url("/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf");font-display:auto}</style><link rel="preload" href="/intersections/assets/fonts/Ionicons.b4eb097d35f44ed943676fd56f6bdc51.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialCommunityIcons.6e435534bd35da5fef04168860a9b8fa.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/AntDesign.3f78af31cca60105799838a1a7a59fbd.ttf" as="font" crossorigin="" /><link rel="preload" href="/intersections/assets/fonts/MaterialIcons.4e85bc9ebe07e0340c9c4fc2f6c38908.ttf" as="font" crossorigin="" /><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-44ae1e3a504d66ca5b6b8760099239a8.js" defer></script>
 </body></html>
